--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,10 @@
 	<artifactId>chat</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>chat</name>
-	<description>Spring Boot chat project </description>
+	<description>Spring Boot chat project</description>
 	<properties>
-		<java.version>17</java.version>
+		<java.version>11</java.version>
+		<maven.test.skip>true</maven.test.skip>
 	</properties>
 	<dependencies>
 
@@ -67,6 +68,12 @@
 					<artifactId>hamcrest-core</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.16.1</version>
 		</dependency>
 
 	</dependencies>
